--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://jakunowa.github.io/goit-js-hw-08/",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/*.html --public-url /parcel-project-template/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
