--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "goit-js-hw-08",
   "version": "2.0.0",
@@ -9,7 +7,7 @@
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html --public-url /goit-js-hw-08/"
   },
-    "repository": {
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/jakunowa/goit-js-hw-08.git"
   },
@@ -18,5 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.8.3"
+  },
+  "dependencies": {
+    "simplelightbox": "^2.14.1"
   }
 }
