--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "homepage": "https://jakunowa.github.io/goit-js-hw-08/",
   "scripts": {
-    "start": "src/index.html",
-    "build": "build src/index.html --public-url /goit-js-hw-08/"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
