--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "parcel": "^2.8.3"
   },
   "dependencies": {
+    "@parcel/transformer-js": "^2.9.3",
     "@vimeo/player": "^2.20.1",
     "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.14.1"
-  }
+  },
+  "type": "module"
 }
